Fixed misaligned drop-down in settings

--- a/style.css
+++ b/style.css
@@ -600,12 +600,6 @@ input[type="range"] {
     gap: 20px;
 }
 
-.simulation-controls-column {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
 #simulationControls {
     display: flex;
     align-items: center;
@@ -641,16 +635,9 @@ body.dark-mode #serviceLevelsTable th {
 }
 
 #speedSlider {
-    width: 167%;
+    width: 100%;
 }
 
-
-/* Responsive Layout
-@media (max-width: 768px) {
-    .simulation-grid {
-        grid-template-columns: 1fr;
-    }
-} */
 
 /* Ensure the grid becomes a single column on narrow screens */
 @media (max-width: 850px) {
@@ -703,14 +690,12 @@ html[dir="rtl"] #serviceLevelsTable td {
     }
 }
 
-/* Appearance Tab - Toggle Option Layout */
 .toggle-option {
     display: flex;
-    align-items: center;
-    padding: 16px 0;
-    border-bottom: 1px solid #eee;
-    justify-content: space-between;
+    align-items: center; /* Ensures icons and selects align properly */
+    margin-bottom: 10px; /* Adjust for spacing between each row */
 }
+
 
 .toggle-option:last-child {
     border-bottom: none;
@@ -888,9 +873,10 @@ button#darkModeButton {
     align-items: center;
 }
 
+
 .select-selected {
     width: 100%;
-    text-align: right;
+    /* text-align: right; */
     background-color: #f0f0f0;
     border-radius: 20px;
     padding: 8px 16px;
@@ -903,7 +889,7 @@ button#darkModeButton {
 .select-selected:empty::before {
     content: "Select Time";
     display: block;
-    text-align: right;
+    /* text-align: right; */
     width: 100%;
     color: #999;
 }
